// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="c-gr5239 soui-textarea-wrapper cyo3o19 soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="c-gr5239 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px;"
  />
  <textarea
    class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea c-br3at4 soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="c-gr5239 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="cherkat soui-textarea-wrapper-padding-box c-hskkcd soui-textarea-footer"
  >
    <div
      style="text-align: end;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="c-gr5239 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="c-gr5239 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-gr5239 soui-textarea-wrapper cyv7o2k soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="c-gr5239 soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="c-gr5239 soui-textarea-wrapper cyr5sk0 soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="cherkat soui-textarea-wrapper-padding-box c-gjofns soui-textarea-wrapper-inner-title-bottom c-4d653y soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
